--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yves's Portfolio</title>
+</head>
+<body>
+    <h1>Yves H&ouml;rler's Portfolio</h1>
+        <h2> I am a Full Stack Web Developer</h2>
+        <hr />
+        <h3>
+            <a href="./public/movie-ranking.html" draggable="false">Movie Ranking Project</a>
+        </h3>
+            <img src="./assets/images/Screenshot_Movie.png" height="200" alt="Screenshot">
+        <h3>
+            <a href="./public/birthday-invite.html" draggable="true">Birthday Invite Project
+        </h3>
+            <img src="./assets/images/Screenshot_birthday.png" height="200">
+        </a>
+        <hr />
+        <a href="./public/about.html">About me</a> <a href="./public/contact.html">Contact me</a>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
-<!-- TODO 4: Add titles/subtitles etc. -->
 
-<!-- TODO 5: Add a link to the project pages -->
 
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+        </body>
+</html>
